# rds2cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: check-install.yaml  create-tag.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  Environment_8hpp.html  Environment_8hpp__dep__incl.map  Environment_8hpp__dep__incl.md5  Environment_8hpp__incl.map  Environment_8hpp__incl.md5  Environment_8hpp_source.html  RObject_8hpp.html  RObject_8hpp__dep__incl.map  RObject_8hpp__dep__incl.md5  RObject_8hpp__incl.map  RObject_8hpp__incl.md5  RObject_8hpp_source.html  RdaFile_8hpp.html  RdaFile_8hpp__dep__incl.map  RdaFile_8hpp__dep__incl.md5  RdaFile_8hpp__incl.map  RdaFile_8hpp__incl.md5  RdaFile_8hpp_source.html  RdsFile_8hpp.html  RdsFile_8hpp__dep__incl.map  RdsFile_8hpp__dep__incl.md5  RdsFile_8hpp__incl.map  RdsFile_8hpp__incl.md5  RdsFile_8hpp_source.html  SEXPType_8hpp.html  SEXPType_8hpp__dep__incl.map  SEXPType_8hpp__dep__incl.md5  SEXPType_8hpp_source.html  Shared_8hpp.html  Shared_8hpp__dep__incl.map  Shared_8hpp__dep__incl.md5  Shared_8hpp__incl.map  Shared_8hpp__incl.md5  Shared_8hpp_source.html  StringEncoding_8hpp.html  StringEncoding_8hpp__dep__incl.map  StringEncoding_8hpp__dep__incl.md5  StringEncoding_8hpp__incl.map  StringEncoding_8hpp__incl.md5  (+214 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  (+57 more)
examples/: CMakeLists.txt
examples/src/: peek_rds_file.cpp  write_dgCMatrix.cpp
include/rds2cpp/: Environment.hpp  ExternalPointer.hpp  RObject.hpp  RdaFile.hpp  RdsFile.hpp  SEXPType.hpp  Shared.hpp  SharedParseInfo.hpp  SharedWriteInfo.hpp  StringEncoding.hpp  Symbol.hpp  Version.hpp  parse_altrep.hpp  parse_atomic.hpp  parse_attributes.hpp  parse_builtin.hpp  parse_environment.hpp  parse_expression.hpp  parse_external_pointer.hpp  parse_language.hpp  parse_list.hpp  parse_object.hpp  parse_pairlist.hpp  parse_rda.hpp  parse_rds.hpp  parse_s4.hpp  parse_single_string.hpp  parse_symbol.hpp  rds2cpp.hpp  utils.hpp  utils_other.hpp  utils_parse.hpp  utils_write.hpp  write_atomic.hpp  write_attributes.hpp  write_builtin.hpp  write_expression.hpp  write_language.hpp  write_list.hpp  write_object.hpp  (+5 more)
tests/: DESCRIPTION  NAMESPACE
tests/R/: RcppExports.R  inspect.R  namespace.R
tests/src/: Makevars  RcppExports.cpp  parse.cpp  write.cpp
tests/tests/: testthat.R
tests/tests/testthat/: setup.R  test-altrep.R  test-atomic.R  test-builtin.R  test-environment.R  test-expression.R  test-external-pointer.R  test-language.R  test-list.R  test-other.R  test-pairlist.R  test-rda.R  test-s4.R  test-symbol.R
